# city-bike-app

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
src/: wsgi.py
src/application/: __init__.py  config.py  models.py  routes.py
src/application/models/: journey.py  station.py
src/application/repositories/: city_bike_repository.py
src/application/services/: import_journeys.py  import_stations.py  journey_service.py
src/application/static/: main.css
src/application/templates/: index.html  journeys.html  layout.html  station.html  stations.html
src/services/: parser.py
src/tests/robot/: journeys.robot  resource.robot  station.robot  stations.robot
src/tests/unittests/: journey_service_test.py
