[tool.poetry]
name = "city-bike-app"
version = "0.1.0"
description = ""
authors = ["Silja Ojanen <44512829+Ronttikasa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "city_bike_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
