[tool.poetry]
name = "city-bike-app"
version = "0.1.0"
description = ""
authors = ["Silja Ojanen <44512829+Ronttikasa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "city_bike_app"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
psycopg2-binary = "^2.9.5"
flask-sqlalchemy = "^3.0.2"
pandas = "^1.5.2"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.9"
robotframework = "^6.0.2"
robotframework-seleniumlibrary = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
